# es_tp1

./: .gitignore  README.md
back/: Dockerfile  Modelfile  README.md  build.sh  llms.py  pyproject.toml  requirements.txt  run.sh
back/project/: main.py
back/project/models/: __init__.py  meeting_analysis.py  user.py
back/src/: .env  database.py  llms.py  load_whisper.py  main.py  run.py
back/src/models/: __init__.py  meeting_analysis.py
front/: angular.json  package-lock.json  package.json
front/.angular/cache/16.2.16/angular-webpack/fc892a4a534b9e44e1483c6599313c41d4196b3e/: 1.pack  2.pack  index.pack  index.pack.old
front/meeting-lm/: README.md  angular.json  package-lock.json
front/meeting-lm/src/: index.html
front/meeting-lm/src/app/: app.component.ts
front/src/: index.html
front/src/app/: app-routing.module.ts  app.module.ts  material.module.ts
front/src/app/main/: app.component.html  app.component.scss  app.component.spec.ts  app.component.ts
front/src/app/root/: app.component.html  app.component.scss  app.component.ts
front/src/services/: api.service.ts  state.service.ts
